# DoctorDoom

./: README.md
backend/: index.ts  package.json  pnpm-lock.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: Footer.tsx  Main.tsx  Navbar.tsx
model/: main.py  pyproject.toml
